EDSC-2236: Fixing alignment of status icon

--- a/static/src/js/components/ProjectCollections/ProjectCollectionsItem.scss
+++ b/static/src/js/components/ProjectCollections/ProjectCollectionsItem.scss
@@ -105,6 +105,10 @@
     margin-right: $spacer/4;
     font-size: 0.85rem;
 
+    .fa {
+      vertical-align: middle;
+    }
+
     &--invalid {
       color: $color__red;
     }
